Orders CRUD functionality, check eligible rewards and calc totals
