# api/swagger/swagger.yaml
@@ -375,6 +375,106 @@ paths:
           description: Unexpected Error
           schema:
             $ref: '#/definitions/Error'
+  /api/v1/orders/create:
+    x-swagger-router-controller: OrdersController
+    post:
+      description: Creates a new order
+      operationId: createOrder
+      parameters:
+        - name: order
+          in: body
+          description: Parameters required for creating a new order
+          required: true
+          schema:
+            $ref: '#/definitions/NewOrder'
+      responses:
+        "201":
+          description: Order has been created
+          schema:
+            $ref: '#/definitions/Order'
+        default:
+          description: Unexpected Error
+          schema:
+            $ref: '#/definitions/Error'
+  /api/v1/orders/update:
+    x-swagger-router-controller: OrdersController
+    put:
+      description: Updates an order
+      operationId: updateOrder
+      parameters:
+        - name: order
+          in: body
+          description: Parameters required for updating a order.  At least one property in the orderData object is required.
+          required: true
+          schema:
+            $ref: '#/definitions/UpdateOrder'
+      responses:
+        "200":
+          description: The order has been updated
+          schema:
+            $ref: '#/definitions/UpdateSuccess'
+        "204":
+          description: The request was processed but no order was found
+        default:
+          description: Unexpected Error
+          schema:
+            $ref: '#/definitions/Error'
+  /api/v1/orders:
+    x-swagger-router-controller: OrdersController
+    get:
+      description: Retrieves all orders
+      operationId: fetchAllOrders
+      responses:
+        "200":
+          description: Returns an array containing all orders' data
+          schema:
+            $ref: '#/definitions/OrderArr'
+        "204":
+          description: The request was processed but no orders were found
+        default:
+          description: Unexpected Error
+          schema:
+            $ref: '#/definitions/Error'
+  /api/v1/orders/{orderId}:
+    x-swagger-router-controller: OrdersController
+    get:
+      description: Retrieves a single order
+      operationId: fetchOneOrder
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Returns a orders' data
+          schema:
+            $ref: '#/definitions/Order'
+        "204":
+          description: The request was processed but no order was found
+        default:
+          description: Unexpected Error
+          schema:
+            $ref: '#/definitions/Error'
+    delete:
+      description: Deletes an order
+      operationId: removeOrder
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: A order has been deleted
+          schema:
+            $ref: '#/definitions/UpdateSuccess'
+        "204":
+          description: The request was processed but no order was found
+        default:
+          description: Unexpected Error
+          schema:
+            $ref: '#/definitions/Error'            
   /swagger:
     x-swagger-pipe: swagger_raw
 
@@ -659,6 +759,108 @@ definitions:
         type: integer
         description: The percentage or dollar discount amount (depending on discountType setting) that applies to the reward
         maxLength: 5
+
+  Order:
+    allOf:
+      - $ref: '#/definitions/NewOrder'
+      - required:
+        - id
+        properties:
+          id:
+            type: integer
+            format: int64
+          products:
+            type: array
+            description: An array of product strings present on the order
+            items: 
+              type: string
+          rewards:
+            type: array
+            description: An array of the rewardIds applied to the order
+            items: 
+              type: string
+          subtotal:
+            description: Sum of all items * qty after rewards have been applied. Not inclusive of GST.
+            type: integer
+
+  OrderArr:
+    type: array
+    items:
+      $ref: '#/definitions/Order'
+
+  NewOrder:
+    type: object
+    required:
+      - items
+    properties:
+      userId:
+        type: integer
+        description: The userId the order will be attributed to.
+        minLength: 1
+        maxLength: 11
+      items:
+        type: array
+        description: An array of products for which this order is applicable
+        items:
+          type: object
+          properties:
+            product:
+              description: The product string eg. 'coffee'. This is used to check reward validity
+              type: string
+            qty:
+              description: The quantity of items purchased
+              type: integer
+            amt:
+              description: The cost of a single item in cents. The total of all items * quantity is performed on the server.
+              type: integer
+
+  UpdateOrder:
+    type: object
+    required:
+      - orderId
+    properties:
+      orderId:
+        type: integer
+        description: The ID of the order that is to be updted
+        minLength: 1
+        maxLength: 11
+      orderData:
+        type: object
+        description: An object containing the order data to update. At least one paramter in this object is required
+      orderData.userId:
+        type: integer
+        description: The userId the order will be attributed to.
+        minLength: 1
+        maxLength: 11
+      orderData.items:
+        type: array
+        description: An array of items for which this order is applicable
+        items:
+          type: object
+          properties:
+            product:
+              description: The product string eg. 'coffee'. This is used to check reward validity
+              type: string
+            qty:
+              description: The quantity of items purchased
+              type: integer
+            amt:
+              description: The cost of a single item in cents. The total of all items * quantity is performed on the server.
+              type: integer
+      orderData.products:
+        type: array
+        description: An array of product strings present on the order
+        items: 
+          type: string
+      orderData.rewards:
+        type: array
+        description: An array of the rewardIds applied to the order
+        items: 
+          type: string
+      orderData.subtotal:
+        type: integer 
+        description: Sum of all items * qty after rewards have been applied. Not inclusive of GST.
+      
 
   Error:
     required:
